[metadata]
name = CraftCrypto_Helpers
version = 0.1.0
license = MIT
description = Helpers for Craft-Crypto Apps
long_description = file: README.rst
author = Craft-Crypto, LLC
author_email = brewers@craft-crypto.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   kivy
   math
   decimal
   queue
   sys
   os
   time
   json

[options.packages.find]
where=src